fix: games dark mode color

--- a/src/styles/containers/AdminContainer/Gamedashboard/_gameDashboard.scss
+++ b/src/styles/containers/AdminContainer/Gamedashboard/_gameDashboard.scss
@@ -1,10 +1,10 @@
 .game_dashboard_wrapper {
-  padding: 0.30rem;
+  padding: 0.3rem;
 }
 .game_dashboard_header {
   background: #7f7f7f;
-  color: #ffff;
-  padding: 0.40rem;
+  color: $text-black;
+  padding: 0.4rem;
   display: flex;
   align-items: start;
   justify-content: space-between;
